// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider 组件测试 create 1`] = `
<div>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%;"
        />
        <div
          class="t-slider__button-wrapper"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-slider__container"
    style="margin-bottom: 50px;"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 10%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
  </div>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 10%; width: 70%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div
          class="t-slider__button-wrapper"
          style="left: 80%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider t-is-disabled"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 10%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`input-number.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-slider__container"
    style="margin-bottom: 50px;"
  >
    <div
      class="t-slider t-slider--with-input"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 10%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
    <div
      class="t-slider__input-container"
    >
      <div
        class="t-input-number t-size-m t-is-controls-right t-input-number--column t-slider-input"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="10"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="10"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider t-slider--with-input"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 10%; width: 70%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div
          class="t-slider__button-wrapper"
          style="left: 80%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
    <div
      class="t-slider__input-container"
    >
      <div
        class="t-input-number t-size-m t-is-controls-right t-input-number--column t-slider-input"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="10"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="10"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-slider__center-line"
      />
      <div
        class="t-input-number t-size-m t-is-controls-right t-input-number--column t-slider-input"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="80"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="80"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`input-number-vertical.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: center;"
  >
    <div
      style="height: 300px; margin-right: 100px;"
    >
      <div
        class="t-slider__container is-vertical"
        style="margin-bottom: 50px;"
      >
        <div
          class="t-slider t-slider--vertical t-slider--with-input"
        >
          <div
            class="t-slider__rail"
          >
            <div
              class="t-slider__track"
              style="bottom: 0%; height: 10%;"
            />
            <div
              class="t-slider__button-wrapper"
              style="bottom: 10%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div />
            <div
              class="t-slider__mark"
            />
          </div>
        </div>
        <div
          class="t-slider__input-container is-vertical"
        >
          <div
            class="t-input-number t-size-m t-is-controls-right t-input-number--column t-slider-input is-vertical"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-down t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="10"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="10"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-up t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style="height: 300px;"
    >
      <div
        class="t-slider__container is-vertical"
      >
        <div
          class="t-slider t-slider--vertical t-slider--with-input"
        >
          <div
            class="t-slider__rail"
          >
            <div
              class="t-slider__track"
              style="bottom: 10%; height: 70%;"
            />
            <div
              class="t-slider__button-wrapper"
              style="bottom: 10%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div
              class="t-slider__button-wrapper"
              style="bottom: 80%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div />
            <div
              class="t-slider__mark"
            />
          </div>
        </div>
        <div
          class="t-slider__input-container is-vertical"
        >
          <div
            class="t-input-number t-size-m t-is-controls-right t-input-number--column t-slider-input is-vertical"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-down t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="10"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="10"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-up t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
          <div
            class="t-slider__center-line"
          />
          <div
            class="t-input-number t-size-m t-is-controls-right t-input-number--column t-slider-input is-vertical"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-down t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="80"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="80"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-up t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`marks.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-slider__container"
    style="margin-bottom: 50px;"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 10%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div>
          <div
            class="t-slider__stop"
            style="left: 0%;"
          />
          <div
            class="t-slider__stop"
            style="left: 12%;"
          />
          <div
            class="t-slider__stop"
            style="left: 37%;"
          />
          <div
            class="t-slider__stop"
            style="left: 60%;"
          />
        </div>
        <div
          class="t-slider__mark"
        >
          <div
            class="t-slider__mark-text"
            style="left: 0%;"
          >
            0°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 12%;"
          >
            12°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 37%;"
          >
            37°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 60%;"
          >
            <button
              style="color: rgb(25, 137, 250);"
            >
              60°C
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 10%; width: 70%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div
          class="t-slider__button-wrapper"
          style="left: 80%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div>
          <div
            class="t-slider__stop"
            style="left: 0%;"
          />
          <div
            class="t-slider__stop"
            style="left: 8%;"
          />
          <div
            class="t-slider__stop"
            style="left: 37%;"
          />
          <div
            class="t-slider__stop"
            style="left: 50%;"
          />
          <div
            class="t-slider__stop"
            style="left: 70%;"
          />
        </div>
        <div
          class="t-slider__mark"
        >
          <div
            class="t-slider__mark-text"
            style="left: 0%;"
          >
            0°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 8%;"
          >
            8°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 37%;"
          >
            37°C
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 50%;"
          >
            <strong
              style="color: rgb(25, 137, 250);"
            >
              50°C
            </strong>
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 70%;"
          >
            70°C
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`min-and-max.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-slider__container"
    style="margin-bottom: 50px;"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 0%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 0%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div>
          <div
            class="t-slider__stop"
            style="left: 0%;"
          />
          <div
            class="t-slider__stop"
            style="left: 100%;"
          />
        </div>
        <div
          class="t-slider__mark"
        >
          <div
            class="t-slider__mark-text"
            style="left: 0%;"
          >
            min:10
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 100%;"
          >
            max:30
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 50%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 0%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div
          class="t-slider__button-wrapper"
          style="left: 50%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div>
          <div
            class="t-slider__stop"
            style="left: 0%;"
          />
          <div
            class="t-slider__stop"
            style="left: 100%;"
          />
        </div>
        <div
          class="t-slider__mark"
        >
          <div
            class="t-slider__mark-text"
            style="left: 0%;"
          >
            min:10
          </div>
          <div
            class="t-slider__mark-text"
            style="left: 100%;"
          >
            max:30
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`step.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-slider__container"
    style="margin-bottom: 50px;"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 10%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
  </div>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 10%; width: 70%;"
        />
        <div
          class="t-slider__button-wrapper"
          style="left: 10%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div
          class="t-slider__button-wrapper"
          style="left: 80%;"
        >
          <div
            class="t-slider__button"
          />
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: center;"
  >
    <div
      style="height: 300px; margin-right: 100px;"
    >
      <div
        class="t-slider__container is-vertical"
        style="margin-bottom: 50px;"
      >
        <div
          class="t-slider t-slider--vertical"
        >
          <div
            class="t-slider__rail"
          >
            <div
              class="t-slider__track"
              style="bottom: 0%; height: 10%;"
            />
            <div
              class="t-slider__button-wrapper"
              style="bottom: 10%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div />
            <div
              class="t-slider__mark"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="height: 300px;"
    >
      <div
        class="t-slider__container is-vertical"
      >
        <div
          class="t-slider t-slider--vertical"
        >
          <div
            class="t-slider__rail"
          >
            <div
              class="t-slider__track"
              style="bottom: 10%; height: 70%;"
            />
            <div
              class="t-slider__button-wrapper"
              style="bottom: 10%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div
              class="t-slider__button-wrapper"
              style="bottom: 80%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div />
            <div
              class="t-slider__mark"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical-marks.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: center;"
  >
    <div
      style="height: 400px; margin-right: 100px;"
    >
      <div
        class="t-slider__container is-vertical"
        style="margin-bottom: 50px;"
      >
        <div
          class="t-slider t-slider--vertical"
        >
          <div
            class="t-slider__rail"
          >
            <div
              class="t-slider__track"
              style="bottom: 0%; height: 10%;"
            />
            <div
              class="t-slider__button-wrapper"
              style="bottom: 10%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div>
              <div
                class="t-slider__stop"
                style="top: 100%;"
              />
              <div
                class="t-slider__stop"
                style="top: 88%;"
              />
              <div
                class="t-slider__stop"
                style="top: 63%;"
              />
              <div
                class="t-slider__stop"
                style="top: 40%;"
              />
            </div>
            <div
              class="t-slider__mark"
            >
              <div
                class="t-slider__mark-text"
                style="top: 100%;"
              >
                0°C
              </div>
              <div
                class="t-slider__mark-text"
                style="top: 88%;"
              >
                12°C
              </div>
              <div
                class="t-slider__mark-text"
                style="top: 63%;"
              >
                37°C
              </div>
              <div
                class="t-slider__mark-text"
                style="top: 40%;"
              >
                <button
                  style="color: rgb(25, 137, 250);"
                >
                  60°C
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="height: 400px;"
    >
      <div
        class="t-slider__container is-vertical"
      >
        <div
          class="t-slider t-slider--vertical"
        >
          <div
            class="t-slider__rail"
          >
            <div
              class="t-slider__track"
              style="bottom: 10%; height: 70%;"
            />
            <div
              class="t-slider__button-wrapper"
              style="bottom: 10%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div
              class="t-slider__button-wrapper"
              style="bottom: 80%;"
            >
              <div
                class="t-slider__button"
              />
            </div>
            <div>
              <div
                class="t-slider__stop"
                style="top: 100%;"
              />
              <div
                class="t-slider__stop"
                style="top: 92%;"
              />
              <div
                class="t-slider__stop"
                style="top: 63%;"
              />
              <div
                class="t-slider__stop"
                style="top: 50%;"
              />
              <div
                class="t-slider__stop"
                style="top: 30.000000000000004%;"
              />
            </div>
            <div
              class="t-slider__mark"
            >
              <div
                class="t-slider__mark-text"
                style="top: 100%;"
              >
                0°C
              </div>
              <div
                class="t-slider__mark-text"
                style="top: 92%;"
              >
                8°C
              </div>
              <div
                class="t-slider__mark-text"
                style="top: 63%;"
              >
                37°C
              </div>
              <div
                class="t-slider__mark-text"
                style="top: 50%;"
              >
                <strong
                  style="color: rgb(25, 137, 250);"
                >
                  50°C
                </strong>
              </div>
              <div
                class="t-slider__mark-text"
                style="top: 30.000000000000004%;"
              >
                70°C
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
